# polars-polars-polars

./: .dockerignore  .env.example  Dockerfile  Makefile  main.py  pyproject.toml
src/: logging_conf.py  settings.py  utils.py
